# AIchessbot

./: .gitignore
chess_engine/: CMakeLists.txt  Makefile  README.md  book.py  engine.py  evaluate.py  movegen.py  search.py  transposition.py  utils.py
chess_engine/src/: README.md  board.cpp  board.h  book.cpp  book.h  evaluate.cpp  evaluate.h  main.cpp  movegen.cpp  movegen.h  nnue.cpp  nnue.h  polyglot_random.h  search.cpp  search.h  syzygy.cpp  syzygy.h  tt.cpp  tt.h  types.h
chess_engine/tests/: benchmark.py  long_game_test.py  low_time_repro.py  perft.py  ponder_test.py  selfplay.py
chess_engine/tools/: fetch_book.sh
chess_engine/tuner/: .gitignore  README.md  tuner.cpp
